jelzes, tarolas, visszavonas

--- a/asset/format.css
+++ b/asset/format.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: consolefont;
-    src: url(lucon.ttf);
-  }
-
 body{
     background-image: url(background.jpg);
 }
@@ -35,9 +30,8 @@ a,a:active,a:link,a:hover,a:visited{
     padding: 25px;
     position: relative;
     width: 100vw;
-    height: 100vh;
 }
 
-.card-body{
-    font-family: consolefont;
+h1{
+    font-weight: bold;
 }
