eszrevettem a hianyzo index.htmlt az egesz munka folyaman

--- a/asset/format.css
+++ b/asset/format.css
@@ -35,3 +35,11 @@ a,a:active,a:link,a:hover,a:visited{
 h1{
     font-weight: bold;
 }
+
+#spacing{
+    height: 20px;
+}
+
+.list-group{
+    margin-bottom: 20px;
+}
